--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <input type="text" placeholder="Digite o número 2" id="num2">
     </p>
     <input type="submit" value="Calcular" id="calc" onclick="Calcular()">
+
+    <p id="resultado"></p>
+
+    <script src="script.js"></script>
     
 </body>
 </html>
