--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </p>
     <input type="submit" value="Calcular" id="calc" onclick="Calcular()">
 
+    <h1>Mostre o Resultado</h1>
     <p id="resultado"></p>
 
     <script src="script.js"></script>
